examples/test/testpolicy9328.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9328
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key46: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value26
          key43: value27
      podSelector:
        matchLabels:
          key22: value2
          key37: value10
          key34: value24
